@@ -16,6 +16,12 @@ GNU grep NEWS                                    -*- outline -*-
   grep now prints a "FILENAME:LINENO: " prefix when diagnosing an
   invalid regular expression that was read from an '-f'-specified file.
 
+  grep -F now tries fgrep matcher for case insensitive matching in
+  multibyte locale.  It improves performance for a case which a pattern
+  is composed of only single byte characters and their all counterparts
+  are also single byte characters and the pattern does not have invalid
+  sequences.
+
 
 * Noteworthy changes in release 2.25 (2016-04-21) [stable]
 
